k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-explore-service
  namespace: fastapi-explore-namespace
spec:
  selector:
    app: fastapi-explore
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
